# aiperf

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.agents/skills/aiperf-llm-ergonomics-review/: SKILL.md
.agents/skills/bump-version/: SKILL.md
.cursor/rules/: python.mdc
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: fern-docs.yml  nightly.yml  pre-commit.yml  resolve-check.yml  run-fern-checks.yml  run-integration-tests.yml  run-unit-tests.yml  test-docs-end-to-end.yml
dev/benchmarks/: zmq_credit_bench.py
docs/: architecture.md  benchmark-datasets.md  cli-options.md  environment-variables.md  genai-perf-feature-comparison.md  index.yml  metrics-reference.md  migrating.md  reproducibility.md
docs/accuracy/: accuracy-benchmarking.md  accuracy_stubs.md
docs/api/: search-history.md  sweep-aggregates.md  synthesis.md
docs/benchmark-modes/: trace-replay.md
docs/dev/: global-invariants.md  patterns.md  sweep-orchestrator.md  yaml-config-future-goals.md
docs/plugins/: creating-your-first-plugin.md  plugin-system.md
docs/reference/: json-export-schema.md  vendor-usage-fields.md  yaml-config-roadmap.md
docs/server-metrics/: server-metrics-json-schema.md  server-metrics-parquet-schema.md  server-metrics-reference.md  server-metrics.md
docs/sweeping/: bayesian-optimization.md  search-recipes.md  space-filling.md
docs/troubleshooting/: sweeps.md
docs/tutorials/: adaptive-search.md  aimo.md  auto-plot.md  blazedit.md  burst-gpt-trace.md  custom-dataset.md  embeddings.md  fixed-schedule.md  goodput.md  gpu-telemetry.md  image-generation.md  inline-datasets.md  multi-run-confidence.md  multi-turn.md  otel-mlflow.md  plot.md  sglang-image-edit.md  sglang-video-generation.md  sharegpt.md  speed-bench.md  sweeps.md  synthetic-dataset.md  vision.md  wandb.md  yaml-config.md  yaml-distributions.md
fern/: .gitignore  docs.yml
src/aiperf/: cli.py  cli_utils.py
src/aiperf/accuracy/: accuracy_console_exporter.py  accuracy_data_exporter.py  accuracy_record_processor.py  accuracy_results_processor.py  benchmark_loader.py  protocols.py
src/aiperf/analysis/: speed_bench_report.py
src/aiperf/api/: api_service.py
src/aiperf/cli_commands/: config.py  plot.py  profile.py  service.py
src/aiperf/cli_runner/: __init__.py  _aggregate.py  _banner.py  _callbacks.py  _multi_run.py  _pareto.py  _post_process.py  _preflight.py  _process_setup.py  _single_run.py  _strategy.py  _sweep_aggregate.py  _sweep_table.py
src/aiperf/common/: base_comms.py  base_component_service.py  base_service.py  bootstrap.py  constants.py  environment.py  finite.py  logging.py  optional_dependencies.py  path_safety.py  protocols.py  random_generator.py  redact.py  session_id_generator.py  tokenizer.py  tokenizer_display.py  tokenizer_validator.py  utils.py
src/aiperf/config/: __init__.py  _cli_runner_templates.py  accuracy.py  adaptive_scale_phase.py  artifacts.py  base.py  cancellation.py  cli_parameter.py  cli_runner.py  config.py  distributions.py  endpoint.py  gpu_telemetry.py  logging.py  metrics.py  mlflow.py  models.py  network_latency.py  otel.py  phases.py  plot.py  ramp.py  runtime.py  server_metrics.py  slos.py  tokenizer.py  types.py  user_files.py  wandb.py
src/aiperf/controller/: base_service_manager.py  kubernetes_service_manager.py  multiprocess_service_manager.py  protocols.py  proxy_manager.py  system_controller.py  system_mixins.py
src/aiperf/credit/: callback_handler.py  messages.py  sticky_router.py  structs.py
src/aiperf/dataset/: dataset_manager.py  memory_map_utils.py
src/aiperf/endpoints/: openai_chat.py  openai_completions.py  template_endpoint.py
src/aiperf/exporters/: console_metrics_exporter.py  console_osl_mismatch_exporter.py  console_usage_discrepancy_exporter.py  exporter_config.py  exporter_manager.py  gpu_telemetry_console_exporter.py  http_trace_console_exporter.py  metrics_base_exporter.py  metrics_csv_exporter.py  metrics_json_exporter.py  mlflow_data_exporter.py  search_history.py  (+6 more)
tests/aiperf_mock_server/: README.md  __main__.py  app.py  config.py  dcgm_faker.py  metrics_utils.py  models.py  node_exporter_faker.py  pyproject.toml  request_recorder.py  scheduler.py  test_auth.py  test_robustness.py  test_scheduler.py  test_scheduler_integration.py  tokens.py  utils.py
tests/component_integration/: conftest.py  test_code_execution_daemon_grading.py  test_multi_objective_e2e.py  test_process_title.py  test_search_e2e.py  test_sobol_sweep_smoke.py
tests/harness/: fake_communication.py  fake_service_manager.py  fake_transport.py  subprocess.py  utils.py
tests/integration/: conftest.py  test_adaptive_convergence.py  test_adaptive_scale.py  test_api_key_redaction.py  test_conftest_cancel.py  test_ctrl_c_cancellation.py  test_custom_gpu_metrics.py  test_gpu_telemetry.py  test_mock_server_record_requests.py  test_multi_run_confidence.py  test_network_latency_calibration.py  test_parameter_sweep.py  test_plot_integration.py  test_random_generator_canary.py  test_recipe_collapse_knee.py  test_request_cancellation.py  test_search_recipes.py  test_server_metrics.py  test_stress.py  test_wait_for_model.py
tests/unit/: conftest.py  test_aggregate_one_cell.py  test_cli_runner.py  test_cli_runner_aggregation.py  test_cli_runner_macos.py  test_cli_runner_sweep_helpers.py  test_cli_utils_escape.py  test_harness_utils.py  test_imports.py  test_sweep_table_logger.py
tests/zmq/: conftest.py  test_zmq_real_transport.py
tools/: _core.py  check_docs_index.py  check_ergonomics.py  debug_pynvml_README.md  debug_pynvml_collector_server.py  debug_pynvml_server.py  ergonomics_baseline.json  fern_release_dryrun.sh  generate_cli_docs.py  generate_config_schema.py  generate_dpkg_attributions.py  generate_env_vars_docs.py  generate_plugin_artifacts.py  generate_python_attributions.py  rename_wheel.py  ruff_baseline.json  ruff_baselined.py  run_trtllm_bench_with_power.py  run_trtllm_serve_with_power.py  run_trtllm_serve_with_power_dcgm.py  suggest_test_docs_weights.py
(+857 files in other folders)
