# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

# Build
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiperf-mock-server"
version = "0.11.0"
description = "AIPerf FastAPI-based OpenAI mock server for AI performance testing"
authors = []
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "transformers>=4.56.0", # Lowest compatible version for dynamo backends
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "cyclopts>=3.0.0",
    "orjson>=3.9.0",
    "prometheus-client>=0.20.0",
    "python-multipart>=0.0.7", # Required for FastAPI Form/File parsing on /v1/images/edits
]
readme = "README.md"
requires-python = ">=3.10,<3.14"

[tool.setuptools]
packages = ["aiperf_mock_server"]

[tool.setuptools.package-dir]
"aiperf_mock_server" = "."

# CLI Entrypoint
[project.scripts]
aiperf-mock-server = "aiperf_mock_server.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "ruff>=0.0.0",
    "pre-commit>=4.2.0",
]

[tool.ruff]
# Base settings for ruff
line-length = 88
indent-width = 4
exclude = ["__pycache__", "build", "dist", ".venv", "venv"]

[tool.ruff.lint]
select = [
    # pycodestyle (except E501)
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# Ignore line length errors, ruff format will handle this but
# can have some lines that are slightly over due to the way formatting works
ignore = ["E501"]

[tool.pytest.ini_options]
# Basic pytest configuration
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (>= 3s, run by default but can be skipped with -m 'not slow')",
]
